<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000000"
    android:orientation="vertical"
    tools:context="com.example.bitfighter.MainActivity$PlaceholderFragment" >


	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/invitolingua"
		android:textColor="#FFFFFF"
		android:gravity="center"
		android:textSize="20dp"
		android:padding="30dp" />
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ENG" 
        android:id="@+id/ENG"
        android:padding="20dp"
        android:textColor="#FFFFFF"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ITA"
        android:id="@+id/ITA"
        android:padding="20dp"
        android:textColor="#FFFFFF"
        android:onClick="start_ITA" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRA"
        android:id="@+id/FRA"
        android:padding="20dp" 
        android:textColor="#FFFFFF"/>
	</LinearLayout>
</LinearLayout >
