<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="#000000"
    android:orientation="vertical" >


	<TextView android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:text="@string/invitolingua"
		android:textColor="#FFFFFF"
		android:gravity="center"
		android:textSize="20dp"
		android:padding="30dp" />
	<LinearLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ENG" 
        android:background="@drawable/england"
        android:id="@+id/ENG"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="20dp"
         android:onClick="start_ENG"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ITA"
        android:background="@drawable/italy"
        android:id="@+id/ITA"
        android:textColor="#000000"
        android:textStyle="bold"
        android:padding="20dp"
        android:onClick="start_ITA" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FRA"
        android:background="@drawable/france"
        android:id="@+id/FRA"
        android:textColor="#000000"
        android:textStyle="bold"	
        android:padding="20dp" 
         android:onClick="start_FRA"/>
	</LinearLayout>
</LinearLayout >