<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="it.unisa.bitfighter.GameOver"
    tools:ignore="MergeRootFrame"
    android:background="@android:color/black" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:paddingBottom="10dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:paddingBottom="40dp"
            android:paddingTop="0dp"
            android:src="@drawable/gameover" />

        <TextView
            android:id="@+id/haitotalizzato"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:paddingBottom="10dp"
            android:text="@string/haitotalizzatoITA"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
        
        <TextView
            android:id="@+id/inseriscinome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30sp"
            android:gravity="center_horizontal"
            android:text="@string/inseriscinomeITA"
            android:textColor="@android:color/white" />
"

        <EditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cliccaperinserireITA"
            android:inputType="textPersonName"
            android:textColor="@android:color/white" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/invia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/inviaITA"
            android:textColor="@android:color/white" />

    </LinearLayout>

</FrameLayout>

